--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -1,1 +1,20 @@
-{% extends 'base.html' %}{% block content %}<h1>{{ page.meta.title or 'Home' }}</h1>{% endblock %}\n
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>{{ meta.title | default("Welcome") }}</h1>
+{{ content|safe }}
+
+<section>
+    <h2>Recent Pages</h2>
+    <ul>
+        {% for page in site.pages[:5] %}
+        <li>
+            <a href="{{ page.url }}">{{ page.title }}</a>
+            {% if page.description %}
+            <p>{{ page.description }}</p>
+            {% endif %}
+        </li>
+        {% endfor %}
+    </ul>
+</section>
+{% endblock %}\n
