--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -1,20 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ meta.title | default("Welcome") }}</h1>
-{{ content|safe }}
-
-<section>
-    <h2>Recent Pages</h2>
-    <ul>
-        {% for page in site.pages[:5] %}
-        <li>
-            <a href="{{ page.url }}">{{ page.title }}</a>
-            {% if page.description %}
-            <p>{{ page.description }}</p>
+            <!-- Custom content if any -->
+<section class=" border-b border-tech-200">
+    <div class="max-w-4xl mx-auto px-6 py-16 md:py-24">
+            {% if content %}
+            <div class="prose prose-lg mx-auto mb-8">
+                {{ content|safe }}
+            </div>
             {% endif %}
-        </li>
-        {% endfor %}
-    </ul>
+    </div>
 </section>
-{% endblock %}\n
+{% endblock %}
